# Shortsyt

./: .gitignore  README.md  _run_film2_only.py  _test_micro_shorts.py  agent_dark_psychology.py  analyze_video_features.py  analyze_video_features.py.bak  authorize_channel.py  auto_cashcow.py  auto_optimizer.py  background_fetcher.py  case_study.md  cashcow_generator.py  daily_shorts_campaign.py  data_collector.py  dynamic_pattern_agent.py  generate_thumbnail.py  main.py  model_trainer.py  one_click_cashcow.py  outplayed_integration.py  publish_existing.py  publish_test_videos.py  pyproject.toml  real_time_monitor_agent.py  run_all_channels.py  setup_daily_task.ps1  setup_tasks.ps1  smart_uploader.py  start_daily.bat  synapsa_analysis_trainer.py  synapsa_benchmark.py  synapsa_bridge.py  synapsa_live_trainer.py  synapsa_trainer.py  test_deduplication.py  test_prompt_loop.py  upload_youtube.py  verify_channels.py  video_audio_tools.py  (+1 more)
accounts/: training_data.jsonl
